@@ -1,11 +1,11 @@
 % File src/library/grDevices/man/pretty.Date.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2010 R Core Team
+% Copyright 2010-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{pretty.Date}
 \title{Pretty Breakpoints for Date-Time Classes}
-\alias{pretty.Date}
+\alias{pretty.Date}%- keep alias{}es - such that ?pretty.Date  works
 \alias{pretty.POSIXt}
 \usage{
 \method{pretty}{Date}(x, n = 5, min.n = n \%/\% 2, sep = " ", \dots)
@@ -14,18 +14,19 @@
 \arguments{
   \item{x}{an object of class \code{"Date"} or \code{"POSIXt"} (i.e.,
     \code{"POSIXct"} or \code{"POSIXlt"}). }
-  \item{n}{integer giving the \emph{desired} number of
-    intervals.  }
+  \item{n}{integer giving the \emph{desired} number of intervals.}
   \item{min.n}{nonnegative integer giving the \emph{minimal} number of
-    intervals.  }
+    intervals.}
   \item{sep}{character string, serving as a separator for certain
     formats (e.g., between month and year). }
   \item{\dots}{further arguments for compatibility with the generic,
     ignored.}
 }
 \description{
-  Compute a  sequence of about \code{n+1} equally spaced \sQuote{nice}
-  values which cover the range of the values in \code{x}.
+  Compute a sequence of about \code{n+1} equally spaced \sQuote{nice}
+  values which cover the range of the values in \code{x}, possibly of
+  length one, when \code{min.n = 0} and there is only one unique
+  \code{x}.
 }
 \value{
   A vector (of the suitable class) of locations, with attribute
@@ -49,6 +50,5 @@ lapply(steps,
            at <- pretty(seq(x, by = s, length = 2), n = 5)
            attr(at, "labels")
        })
-
 }
 \keyword{dplot}
